# OnexOS

./: .gitignore  LICENSE  Makefile  README-App.md  README-Freedom-OS.md  README-Freedom-OS.txt  README-MetaWebOS.md  README-Mix.md  README-Usage.md  README-Web.md  README-game.md  README.md  app-blurb.md  gdb-commands.txt  lib  makefile  vk_layer_settings.txt
android/: settings.gradle
android/onexos/: CMakeLists.txt  build.gradle
android/onexos/src/main/: AndroidManifest.xml
android/onexos/src/main/java/android/network/object/onexos/: OnexBG.java  OnexBGJob.java  OnexBGRestarter.java  OnexUI.java
android/onexos/src/main/res/values/: strings.xml
built/: cdc-acm.ko  libhybris-platformcommon.so.1  libhybris-vulkanplatformcommon.so.1  libvulkan.so.1
docs/: bashrc  bootloader.txt  how-to  hybris-opt-tree  lineage_oneplus5_defconfig  notes-on-oneplus-5t.txt  ut-debs.txt
include/: README  android-headers  freetype2  libevdev-1.0  libhybris  libinput.h  libudev.h  ont.h  vulkan
patches/: hybris-build-diffs  hybris-diffs
src/: mathlib.h
src/onl/: onl.c  onl.h
src/onl/android/: JNI.c  vulkan-and.c
src/onl/desktop/: vulkan-xcb.c
src/onl/mobile/: hwc.cpp  hwc.h  hwc_c.h  vulkan-hwc.c
src/ont/: behaviours.c  geometry.h  keyboard.c  linmath-plus.h  onx-nrf.c  onx-spin.c  onx-spin.frag  onx-spin.vert  onx-sw.c  onx-vulkan.c  onx-wear.c  onx.c  outline.h  user-2d.c  user-2d.h  user-3d.c  user-vk-common.h  user.c
src/ont/button-light/: button.c  light.c
src/ont/g2d/: g2d-internal.h  g2d.c  g2d.h
src/ont/nRF5/: evaluators.c  evaluators.h  g2d-lcd.c  g2d.c  g2d.h  io-evaluators.c  io-evaluators.h  keyboard.c  mathlib.h  onx-iot.c  onx-pcr.c  onx-sw.c  onx-wear.c  user.c
src/ont/unix/: g2d-vulkan.c  geometry.c  geometry.h  linmath-plus.h  ont-vk.c  onx-vk.c  onx-vk.h  onx-vulkan.c  onx-vulkan.h  onx.c  onx.frag  onx.vert  outline.c  outline.h  user-onl-vk.h  user-onx-vk.h  user-vk-common.h  user.c
src/ont/vulkan/: vulkan.c  (+2 more)
tests/: main.c  test-behaviours.c
(+5 files in other folders)
